# restai-examples

./: README.md  pyproject.toml
restai-examples/: loadtest.py  openai.py  openai_loadtest.py
